# Mapping

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE  Makefile  README.md  TI_R2D2_MouseSensor.kicad_pcb  TI_R2D2_MouseSensor.kicad_prl  TI_R2D2_MouseSensor.kicad_pro  TI_R2D2_MouseSensor.kicad_sch  _cpp_flags  _linker_flags  _linker_libs  arrays.txt  averagingRotation.c  blurShader.fs  final_magneto.ino  fp-info-cache  lidar_tutorial.cpp  main.cpp  main.py  platformio.ini  qrcodegen.cpp  read.py  readme.md  scanExporter.cpp  simple_magneto.ino  visualDemo.cpp
Make_grid_Python/: main.py  read.py
Ros/: README.md
html/: annotated.html  classes.html  classqrcodegen_1_1_bit_buffer-members.html  classqrcodegen_1_1_bit_buffer.html  classqrcodegen_1_1_qr_code-members.html  classqrcodegen_1_1_qr_code.html  classqrcodegen_1_1_qr_segment-members.html  classqrcodegen_1_1_qr_segment.html  classqrcodegen_1_1_qr_segment_1_1_mode-members.html  classqrcodegen_1_1_qr_segment_1_1_mode.html  classqrcodegen_1_1data__too__long-members.html  classqrcodegen_1_1data__too__long.html  files.html  globals.html  globals_func.html  hierarchy.html  index.html  lidar__tutorial_8cpp.html  main_8cpp.html  md__r_e_a_d_m_e.html  pages.html  qrcodegen_8hpp_source.html  scanExporter_8cpp.html  structVector2-members.html  structVector2.html  visualDemo_8cpp.html
latex/: annotated.tex  classqrcodegen_1_1_bit_buffer.tex  classqrcodegen_1_1_qr_code.tex  classqrcodegen_1_1_qr_segment.tex  classqrcodegen_1_1_qr_segment_1_1_mode.tex  classqrcodegen_1_1data__too__long.tex  files.tex  hierarchy.tex  (+8 more)
(+130 files in other folders)
